fix broken CSS in the ParentMessageInfo component

--- a/src/modules/Thread/components/ParentMessageInfo/ParentMessageInfoItem.scss
+++ b/src/modules/Thread/components/ParentMessageInfo/ParentMessageInfoItem.scss
@@ -80,7 +80,7 @@
   width: 56px;
 }
 
-.sendbird-parent-message-info-item__thumbnail-message__image-cover {;
+.sendbird-parent-message-info-item__thumbnail-message__image-cover {
   background-color: var(--sendbird-light-overlay-01);
   border-radius: 16px;
   display: none;
